version 1.9.2.1:
	* Support the case where multiple classloaders each load the Cobertura 
	  classes.  (Ed Randall)

version 1.9.2:
	* Cobertura is now thread safe.
	* Fix for FileLocker exception when writing coverage data 
	  (java.lang.IllegalStateException: Shutdown in progress) that started
	  to appear with Java 6 update 14. (Chris van Es)
	* Fix for bug "Unix scripts behave oddly due to DOS format - ID: 2788621"

version 1.9.1.1:
	* Just a copy of 1.9.1 with a corrected Maven POM file (cobertura-runtime.pom).
	  A new version has to be created to get it uploaded to the central Maven repo.

version 1.9.1:
	* Complexity calculation now works with Java 5 language
	  features such as Annotations. (Tri Bao Ho)
	* Removed the bold font from the source-view for uncovered lines to
	  improve the alignment.  (Jiri Mares)
	* Support Ant <dirset>s. (Matt Cordes, John Lewis)
	* Support the antlib mechanism for defining and importing 
	  ant tasks. (Richard Atkins)
	* Reports now support source encoded in something than UTF-8. (Jiri Mares)
	* Report generation performance improvement. (Ignat Zapolsky)
	* Report generation will look in zip and jar files if the 
	  source java file is not found. (Charlie Squires, John Lewis)
	* cobertura-check with linerate=0, branchrate=0, 
	  packagebranchrate=0, packagelinerate=0, totalbranchrate=0,
	  totallinerate=0 will no longer default all the values to
	  50 as before.   Therefore, cobertura-check will always pass.
	  Note that this still means that <cobertura-check /> (with
	  no attributes) will still default to 50 for all rates. (Charlie
	  Squires) (Bug 2152919)
	* New coberturaFlush.war is created.   Deploy it to a 
	  web server and invoke http://<HOST>:<PORT>/coberturaFlush/flushCobertura
	  for a convenient way of flushing the cobertura data to the
	  datafile without stopping the web server.  (Amit Nithianandan)
	* XML report now shows total lines-covered, lines-valid, 